--- a/css/style.css
+++ b/css/style.css
@@ -32,5 +32,17 @@ form{
 
 }
 
+.apagando{
+    animation: fadeout 2s;
+}
+
+@keyframes fadeout {
+    from {
+        opacity: 1;
+    }
+    to{
+        opacity: 0;
+    }    
+}
 
 
